--- a/TelosysTools/templates/server-rest-jersey-spring-hibernate/entity/jpa_bean_with_links.vm
+++ b/TelosysTools/templates/server-rest-jersey-spring-hibernate/entity/jpa_bean_with_links.vm
@@ -32,8 +32,7 @@ $generator.generate($target.entityName ,  "${entity.name}Key.java", $target.fold
 package ${target.javaPackageFromFolder($SRC)};
 
 import java.io.Serializable;
-
-//import javax.validation.constraints.* ;
+import javax.validation.constraints.* ;
 //import org.hibernate.validator.constraints.* ;
 
 #foreach( $import in $java.imports($entity) )
@@ -91,6 +90,9 @@ $jpa.fieldAnnotations(4, $field)
 ##     
 ## #end
 $jpa.fieldAnnotations(4, $field)
+	#if($field.isNotNull()) 
+	@NotNull
+	#end
 	@Size(min=0, max=$field.maxLength)	
     private $field.formattedType(10) $field.formattedName(12) #if($field.hasInitialValue())= ${field.initialValue} #end;
 
