--- a/TelosysTools/templates/server-rest-jersey-spring-hibernate/java_servicio/servicio_java_impl.vm
+++ b/TelosysTools/templates/server-rest-jersey-spring-hibernate/java_servicio/servicio_java_impl.vm
@@ -29,6 +29,7 @@ public class ${entity.name}ServiceImpl implements ${entity.name}Service {
 			try {
 				${uncapitalizedEntityName}Persistence.insert(obj);
 			} catch (Exception e) {
+				e.printStackTrace();
 				return false;
 			}
 		}
@@ -40,6 +41,7 @@ public class ${entity.name}ServiceImpl implements ${entity.name}Service {
 			try {
 				${uncapitalizedEntityName}Persistence.save(obj);
 			} catch (Exception e) {
+				e.printStackTrace();
 				return false;
 			}
 		}		
@@ -51,6 +53,7 @@ public class ${entity.name}ServiceImpl implements ${entity.name}Service {
 			try {
 				${uncapitalizedEntityName}Persistence.delete(obj);
 			} catch (Exception e) {
+				e.printStackTrace();
 				return false;
 			}
 		}			
@@ -67,6 +70,7 @@ public class ${entity.name}ServiceImpl implements ${entity.name}Service {
 			return ${uncapitalizedEntityName}Persistence.load( $fn.argumentsList( $entity.keyAttributes ) );
 #end	
 		}catch (Exception e) {
+			e.printStackTrace();
 			return null;
 		}		
 	}
@@ -75,6 +79,7 @@ public class ${entity.name}ServiceImpl implements ${entity.name}Service {
 		try {
 			return ${uncapitalizedEntityName}Persistence.loadAll();
 		} catch (Exception e) {
+			e.printStackTrace();
 		}
 		return null;
 	}
